@@ -6,6 +6,7 @@ Version 1.2.6 (!!!!!!!!! 1.3.0 if includes plural forms !!!!!!!!!!!!!!!!)
 - [Win32] visual improvements to main window (Tim Kosse)
 - usability improvements
 - fixed storing of non-ASCII catalog headers
+- poEdit now preserves non-standard entries in PO file header
 - added more translations:
      Punjabi (Amanpreet Singh Alam)
      Albanian (Besnik Bleta)
